--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "betterScripts": {
     "test": {
       "command": "node ./node_modules/mocha/bin/mocha -s 250 -c __test__/* --compilers js:babel-core/register --watch",
-      "env": {
-      }
+      "env": {}
     }
   },
   "dependencies": {
@@ -57,6 +56,7 @@
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "8.0.0",
     "eslint-loader": "^1.0.0",
+    "eslint-plugin-flowtype": "^2.16.1",
     "eslint-plugin-import": "^1.7.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.0.1",
