--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,13 @@
 {
   "presets": [
     "es2015",
-    "stage-0"
+    "stage-0",
+    "latest"
   ],
   "plugins": [
-    "transform-decorators-legacy"
+    "transform-decorators-legacy",
+    "typecheck",
+    "syntax-flow",
+    "transform-flow-strip-types"
   ]
 }
