--- a/.eslintrc
+++ b/.eslintrc
@@ -1,35 +1,29 @@
 {
-  "extends": "eslint-config-airbnb",
+  "extends": "eslint-config-airbnb/base",
   "parser": "babel-eslint",
-  "env": {
-    "browser": true,
-    "node": true,
-    "mocha": true
+  "plugins": [
+    "babel",
+    "json"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 7,
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "rules": {
-    "flowtype/define-flow-type": 1,
-    "flowtype/require-parameter-type": 1,
-    "flowtype/require-return-type": [
-      1,
-      "always",
-      {
-        "annotateUndefined": "never"
-      }
-    ],
-    "flowtype/space-after-type-colon": [
-      1,
-      "always"
-    ],
-    "flowtype/space-before-type-colon": [
-      1,
-      "never"
-    ],
-    "flowtype/type-id-match": [
-      1,
-      "^([A-Z][a-z0-9]+)+Type$"
-    ],
-    "flowtype/use-flow-type": 1,
-    "flowtype/valid-syntax": 1,
+    "babel/generator-star-spacing": 1,
+    "babel/new-cap": 1,
+    "babel/array-bracket-spacing": 1,
+    "babel/object-curly-spacing": 0,
+    "babel/object-shorthand": 1,
+    "babel/arrow-parens": 0,
+    "babel/no-await-in-loop": 0,
+    "babel/flow-object-type": 1,
+    "babel/func-params-comma-dangle": 1,
+    "new-cap": 0,
+    "arrow-parens": 0,
+    "global-require": 0,
     "react/no-multi-comp": 0,
     "import/default": 0,
     "import/no-duplicates": 0,
@@ -45,12 +39,11 @@
         "SwitchCase": 1
       }
     ],
-    "react/jsx-boolean-value": 0,
     "consistent-return": 0,
     "no-unused-vars": 0,
     "no-confusing-arrow": 0,
     "no-underscore-dangle": 0,
-    "no-console": 0,
+    "no-console": 1,
     "no-alert": 0,
     "max-len": 0,
     "no-multiple-empty-lines": [
@@ -66,36 +59,13 @@
       }
     ],
     "prefer-template": 0,
-    "react/prefer-stateless-function": 0,
-    "global-require": 0,
-    "new-cap": 0,
-    "no-restricted-syntax": 0,
-    "no-return-assign": 0
-  },
-  "plugins": [
-    "react",
-    "import",
-    "flowtype"
-  ],
-  "settings": {
-    "import/parser": "babel-eslint",
-    "import/resolve": {
-      "moduleDirectory": [
-        "node_modules",
-        "src"
-      ]
-    },
-    "flowtype": {
-      "onlyFilesWithFlowAnnotation": true
-    }
-  },
-  "globals": {
-    "__DEVELOPMENT__": true,
-    "__CLIENT__": true,
-    "__SERVER__": true,
-    "__DISABLE_SSR__": true,
-    "__DEVTOOLS__": true,
-    "socket": true,
-    "webpackIsomorphicTools": true
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true,
+        "optionalDependencies": false,
+        "peerDependencies": false
+      }
+    ]
   }
 }
